--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
 
     // retrofit
     implementation("com.squareup.retrofit2:retrofit:${rootProject.ext.retrofit_version}")
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     // GSON
     implementation ("com.squareup.retrofit2:converter-gson:${rootProject.ext.gson_version}")
 
@@ -87,7 +86,15 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+
+    // Optional -- Mockito framework
+    testImplementation "org.mockito:mockito-core:4.11.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation("org.mockito:mockito-inline:2.11.0")
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 }
